changed colour of looking for text on results page to prevent contrast issue and added a class for results page

--- a/powo-portal/src/main/frontend/src/sass/sites/colplanta.scss
+++ b/powo-portal/src/main/frontend/src/sass/sites/colplanta.scss
@@ -1,5 +1,18 @@
 .s-colplanta {
-
+  &.s-search__top {
+    .form-links {
+      li {
+        color: $kew-black;
+        .form-link {
+          color: $kew-black;
+          border-bottom: 2px solid $kew-black;
+          svg {
+            fill: $kew-black
+          }
+        }
+      }
+    }
+  }
   .featured { display: none; }
 
   .c-header {
